# Houdini-Python-Stubs

./: .gitignore  .gitmodules  README.md  parse-head-file.ipynb  parse-header.ipynb  pyproject.toml  requirements.txt
src/houdini_python_stubs/: _houdini_env.py  _stubgen_utils.py  doc_validation.py  hapi_pyi_gen_standalone.py  hou_pyi_update.py  pdg_pyi_gen.py  pdg_pyi_gen_standalone.py  workflow.py
