[project]
name = "Houdini-Python-Stubs"
version = "0.1.0"
description = "Python type stubs for Houdini"
authors = [
    {name = "Gaussian"},
]
dependencies = [
    "cxxheaderparser>=1.3.1",
    "mypy>=1.8.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm]
distribution = false
