[project]
name = "Houdini-Python-Stubs"
version = "0.1.0"
description = "Python type stubs for Houdini"
authors = [
    {name = "Gaussian"},
]
dependencies = [
    "cxxheaderparser>=1.3.1",
    "mypy>=1.8.0",
    "MonkeyType>=23.3.0",
    "attrs>=24.2.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "-e file:///${PROJECT_ROOT}/submodules/pybind11-stubgen#egg=pybind11-stubgen",
]
